fix(theme): make .badge-text center aligned

--- a/projects/element-theme/src/styles/bootstrap/mixins/_badge-text.scss
+++ b/projects/element-theme/src/styles/bootstrap/mixins/_badge-text.scss
@@ -13,4 +13,5 @@
   padding-inline: map.get(spacers.$spacers, 2);
   font-family: variables.$font-family-sans-serif;
   font-weight: typography.$si-font-weight-semibold;
+  text-align: center;
 }
